Fixed bug where currentQuestion would exceed count of questions list, added space between num/max to make readable.

--- a/src/QuizYourFriends/scss/site.scss
+++ b/src/QuizYourFriends/scss/site.scss
@@ -126,6 +126,10 @@ input[type=submit] {
     }
 }
 
+.Question {
+    overflow-wrap: break-word;
+}
+
 #contact {
     text-align: right;
 }
@@ -145,5 +149,9 @@ input[type=submit] {
         .UsersAndMessages {
             flex: 1 0 30%;
         }
+    }
+
+    .Question {
+        max-width: 50vw;
     }
 }
